<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".RequestDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/app_top_bar"
                style="@style/Widget.StudentApp.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:background="@color/primaryDarkColor"
                android:elevation="8sp"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:titleTextColor="@color/whiteColor"
                tools:ignore="UnusedAttribute">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="32sp"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:text="@string/title_request_detail"
                    android:textAppearance="@style/TitleText"
                    android:textColor="@color/whiteColor" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/grid_spacing">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/ic_student"
                        tools:ignore="ContentDescription"
                        android:scaleType="fitXY"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/requestDetail_title_default"
                            android:textSize="20sp"
                            android:gravity="center"
                            android:layout_gravity="center"/>

                        <TextView
                            android:id="@+id/tvRequestStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="0.75"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/faceColor"
                            android:text="@string/request_default_status"
                            android:textAppearance="?attr/textAppearanceLargePopupMenu"/>
                    </LinearLayout>

                </LinearLayout>

                <View style="@style/Divider" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:text="Chi phí"
                    android:layout_marginHorizontal="@dimen/grid_spacing"
                    android:layout_marginTop="@dimen/grid_spacing"
                    tools:ignore="UnusedAttribute" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:text="50,000"
                    android:layout_marginHorizontal="@dimen/grid_spacing"
                    android:textColor="@color/primaryColor"
                    tools:ignore="UnusedAttribute" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/grid_spacing">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/grid_spacing">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceCaption"
                            android:text="@string/req_detail_title_Note" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:text="@string/lorem_ipsum_default_1" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:text="Đính kèm"
                    android:layout_marginHorizontal="@dimen/grid_spacing"
                    tools:ignore="UnusedAttribute" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/grid_spacing"
                    tools:targetApi="o">

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:chipIcon="@drawable/ic_student"
                        android:text="Attachment_1"
                        android:clickable="false"/>

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:chipIcon="@drawable/ic_student"
                        android:layout_marginLeft="10dp"
                        android:text="Attachment_2"
                        android:clickable="false"/>

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:chipIcon="@drawable/ic_student"
                        android:layout_marginLeft="10dp"
                        android:text="Attachment_3"
                        android:clickable="false"/>

                </LinearLayout>

                <View style="@style/Divider"
                    android:layout_marginTop="@dimen/grid_spacing"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingVertical="@dimen/padding_extra_small"
                    android:paddingLeft="@dimen/padding_medium"
                    android:text="@string/req_detail_title_More_Info"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <View style="@style/Divider" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceCaption"
                            android:padding="10dip"
                            android:text="Ngày gửi yêu cầu" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:text="25 - 12 - 2019" />

                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceCaption"
                            android:padding="10dip"
                            android:text="Người gửi" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:text="Phạm Hoàng Sơn" />

                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceCaption"
                            android:padding="10dip"
                            android:text="Người xử lý yêu cầu" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:text="Trần Thị Mỹ Hạnh" />

                    </TableRow>

                </TableLayout>

                <View style="@style/Divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/grid_spacing">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hủy Yêu cầu"
                        android:textColor="@color/tongueColor"
                        app:strokeColor="@color/tongueColor"
                        app:rippleColor="@color/tongueColor"/>

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button"
                        android:id="@+id/btnFeedback"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Đánh giá"
                        android:layout_marginLeft="10dp"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>